--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,12 +5,13 @@ html {
 .container {
   max-width: 800px;
   margin: 0 auto;
-  padding: 0.5rem 1.5rem 1.5rem 1.5rem;
+  padding: 1rem 1.5rem 1.5rem 1.5rem;
   text-align: center;
 }
 
 .header {
   margin-bottom: 1rem;
+  padding-top: 0.5rem;
 }
 
 .header h1 {
